--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -43,7 +43,10 @@
 
   <div class="field">
     <%= f.label :province %><br />
-    <%= f.text_field :province %>
+    <%= f.select :province, options_for_select("British Columbia":"BC", "Alberta":"AB", "Saskatchewan":"SK",
+                                                   "Manitoba":"MB", "Ontario":"ON", "Quebec":"QC", "New Brunswick":"NB",
+                                                   "Newfoundland":"NL", "Nova Scotia":"NS", "Prince Edward Island":"PE",
+                                                   "Northwest Territories":"NT", "Yukon":"YT", "Nunavut":"NU") %>
   </div>
 
   <div class="field">
