--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -27,6 +27,40 @@
     <%= f.password_field :current_password, autocomplete: "off" %>
   </div>
 
+  <div class="field">
+    <%= f.label :firstname %><br />
+    <%= f.text_field :firstname %>
+  </div>
+
+  <div class="field">
+    <%= f.label :lastname %><br />
+    <%= f.text_field :lastname %>
+  </div>
+
+  <div class="field">
+    <%= f.label :address %><br />
+    <%= f.text_field :address %>
+  </div>
+
+  <div class="field">
+    <%= f.label :city %><br />
+    <%= f.text_field :city %>
+  </div>
+
+  <div class="field">
+    <%= f.label :province %><br />
+    <%= f.select :province, options_for_select("British Columbia":"BC", "Alberta":"AB", "Saskatchewan":"SK",
+                                                   "Manitoba":"MB", "Ontario":"ON", "Quebec":"QC", "New Brunswick":"NB",
+                                                   "Newfoundland":"NL", "Nova Scotia":"NS", "Prince Edward Island":"PE",
+                                                   "Northwest Territories":"NT", "Yukon":"YT", "Nunavut":"NU") %>
+  </div>
+
+  <div class="field">
+    <%= f.label :postalcode %>
+    <em>(format:  'A1B2C3')</em><br />
+    <%= f.text_field :postalcode %>
+  </div>
+
   <div class="actions">
     <%= f.submit "Update" %>
   </div>
