--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,21 @@
   </head>
   <body>
 
+    <nav>
+      <% if musician_signed_in? %>
+
+        <h3>you have succesfully signed in</h3>
+        <%= link_to "Sign Out", destroy_musician_session_path, :method => :delete %>
+
+      <% else %>
+
+        <h1> Welcome to Band Aide</h1>
+        <%= link_to "Sign In", new_musician_session_path, :method => :get %>
+        <%= link_to "Sign up", new_musician_registration_path, :method => :get %>
+
+<% end %>
+    </nav>
+
     <% if notice %>
       <p class="alert alert-success"><%= notice %></p>
     <% end %>
