Added submit button to bands/new form.

--- a/app/views/bands/new.html.erb
+++ b/app/views/bands/new.html.erb
@@ -15,4 +15,8 @@
     <%= f.label :description %><br />
     <%= f.text_field :description %>
   </div>
+
+  <div>
+    <%= f.submit %>
+  </div>
 <% end %>
