Removed commas in index html

--- a/app/views/bands/index.html.erb
+++ b/app/views/bands/index.html.erb
@@ -6,8 +6,7 @@
 
 <p>
   <a href="bands/<%=band.id%>">
-  <%=band.name %>, <%= band.genre.description %>``
-
+  <%=band.name %>, <%= band.genre.description %>
 </p>
 
 <p>
