--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,3 +2,11 @@
 @import "bourbon";
 @import "neat";
 @import "base/base";
+
+section{
+  @include outer-container;
+  aside{
+    @include span-columns(12);
+
+  }
+}
