--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,10 +3,16 @@
 @import "neat";
 @import "base/base";
 
-section{
+header>video{
   @include outer-container;
-  aside{
-    @include span-columns(12);
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin:auto;
+  min-height: 100%;
+  min-width: 100%;
+  z-index: 1;
 
-  }
+  
 }
