--- a/app/views/bands/new.html.erb
+++ b/app/views/bands/new.html.erb
@@ -8,7 +8,7 @@
 
   <div class="field">
     <%= f.label :genre %><br />
-    <%= f.select :genre, options_for_select("Classical":"Classical", "Heavy Metal":"Heavy Metal", "Goth":"Goth", "Alternative":"Alternative", "Pop":"Pop", "Blues":"Blues", "Psychadelic":"Psychadelic", "Punk":"Punk", "Glam":"Glam", "Britpop":"Britpop", "Indie":"Indie") %>
+    <%= f.select :genre, options_for_select() %>
   </div>
 
   <div class="field">
