--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,28 +8,52 @@
   </head>
   <body>
 
+    <header class="navigation">
+  <div class="navigation-wrapper">
+    <a href="javascript:void(0)" class="logo">
+      <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_1.png" alt="">
+    </a>
+    <a href="" class="navigation-menu-button" id="js-mobile-menu">MENU</a>
+    <div class="nav">
+      <ul id="navigation-menu">
+        <li class="nav-link"><a href="javascript:void(0)">Products</a></li>
+        <li class="nav-link"><a href="javascript:void(0)">About Us</a></li>
+        <li class="nav-link"><a href="javascript:void(0)">Contact</a></li>
+        <li class="nav-link more"><a href="javascript:void(0)">More</a>
+          <ul class="submenu">
+            <li><a href="javascript:void(0)">Submenu Item</a></li>
+            <li><a href="javascript:void(0)">Another Item</a></li>
+            <li class="more"><a href="javascript:void(0)">Item with submenu</a>
+              <ul class="submenu">
+                <li><a href="javascript:void(0)">Sub-submenu Item</a></li>
+                <li><a href="javascript:void(0)">Another Item</a></li>
+              </ul>
+            </li>
+            <li class="more"><a href="javascript:void(0)">Another submenu</a>
+              <ul class="submenu">
+                <li><a href="javascript:void(0)">Sub-submenu</a></li>
+                <li><a href="javascript:void(0)">An Item</a></li>
+              </ul>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+    <div class="navigation-tools">
+      <div class="search-bar">
+        <div class="search-and-submit">
+          <input type="search" placeholder="Enter Search" />
+          <button type="submit">
+            <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/search-icon.png" alt="">
+          </button>
+        </div>
+      </div>
+      <a href="javascript:void(0)" class="sign-up">Sign Up</a>
+    </div>
+  </div>
+</header>
 
-    <header>
-      <video src="http://ak8.picdn.net/shutterstock/videos/4496768/preview/stock-footage-concert-rock-band-performing-on-stage-with-singer-performer-guitar-drummer-music-video-punk-heav.mp4" autoplay="autoplay">
 
-      </video>
-        <main>
-          <section class="navigation"
-            <span class="Title"> Welcome to Band Aide</span>
-              <span>Hello User!</span>
-                <span>Edit Profile</span>
-                  <% if musician_signed_in? %>
-                    <h3>you have succesfully signed in</h3>
-                      <%= link_to "Sign Out", destroy_musician_session_path, :method => :delete %>
-                        <% else %>
-                          <%= link_to "Sign In", new_musician_session_path, :method => :get %>
-                            <%= link_to "Sign up", new_musician_registration_path, :method => :get %>
-
-
-      </aside>
-                <% end %>
-        </section>
-    </header>
     <% if notice %>
       <p class="alert alert-success"><%= notice %></p>
     <% end %>
