Added a back link on musician and band show pages

--- a/app/views/musicians/show.html.erb
+++ b/app/views/musicians/show.html.erb
@@ -8,3 +8,5 @@
 
 Name:
 <%= @musician.firstname %> <%= @musician.lastname %>
+
+<br /><%= link_to "Back", request.referer.present? ? request.referer : root_path %>
