--- a/app/views/bands/show.html.erb
+++ b/app/views/bands/show.html.erb
@@ -4,3 +4,5 @@
 <h1><%= @band.name %></h1>
 
 <%= @band.description %>
+
+<br /><%= link_to "Back", request.referer.present? ? request.referer : root_path %>
