--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,10 @@
   <body>
 
     <nav>
+      <%= link_to "Band Aide", root_path %>
       <% if musician_signed_in? %>
         <%= image_tag current_musician.avatar.thumb %>
+        <%= link_to "Show Profile", musician_path(current_musician) %>
         Welcome <%= current_musician.firstname %>
         <%= link_to "Create a band", new_band_path %>
         <%= link_to "Sign Out", destroy_musician_session_path, :method => :delete %>
