--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,14 +1,29 @@
 <h1>Welcome to Band Aide</h1>
+<main>
+  <section id="bands-list">
 
-<h3>Bands</h3>
+    <h3>Bands</h3>
 
-<% @bands.each do |band| %>
-  <%= band.name %><br />
-<% end %>
+    <% @bands.each do |band| %>
+      <%= band.name %><br />
+    <% end %>
+  </section>
 
-<h3>Musicians</h3>
+  <aside id="search-category-list">
+    <p>
+      Search by Genre:
+    </p>
+    <% @genres.each do |genre| %>
+      <%= genre.description %>
+    <% end %>
+  </aside>
 
-<% @musicians.each do |musician| %>
-  <%= musician.firstname %><br />
-  <%= image_tag musician.avatar.thumb %><br />
-<% end %>
+  <section id="musicians-list">
+    <h3>Musicians</h3>
+
+    <% @musicians.each do |musician| %>
+      <%= musician.firstname %><br />
+      <%= image_tag musician.avatar.thumb %><br />
+    <% end %>
+  </section>
+</main>
