--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,28 +19,17 @@
     <a href="" class="navigation-menu-button" id="js-mobile-menu">MENU</a>
     <div class="nav">
       <ul id="navigation-menu">
-        <li class="nav-link"><a><%= button_to "Sign up", new_musician_registration_path, :method => :get %> </a></li>
-        <li class="nav-link"><a href="javascript:void(0)">About Us</a></li>
-        <li class="nav-link"><a href="javascript:void(0)">Contact</a></li>
-        <li class="nav-link more"><a href="javascript:void(0)">More</a>
-          <ul class="submenu">
-            <li><a href="javascript:void(0)">Submenu Item</a></li>
-            <li><a href="javascript:void(0)">Another Item</a></li>
-            <li class="more"><a href="javascript:void(0)">Item with submenu</a>
-              <ul class="submenu">
-                <li><a href="javascript:void(0)">Sub-submenu Item</a></li>
-                <li><a href="javascript:void(0)">Another Item</a></li>
-              </ul>
-            </li>
-            <li class="more"><a href="javascript:void(0)">Another submenu</a>
-              <ul class="submenu">
-                <li><a href="javascript:void(0)">Sub-submenu</a></li>
-                <li><a href="javascript:void(0)">An Item</a></li>
-              </ul>
-            </li>
-          </ul>
-        </li>
-      </ul>
+        <li class="nav-link"><a><%= link_to "Home", root_path %></a></li>
+        <% if musician_signed_in? %>
+          <li class="nav-link"><a><%= link_to "Create a band", new_band_path %> </a></li>
+          <li class="nav-link"><a><%= image_tag current_musician.avatar.thumb %> </a></li>
+          <li class="nav-link"><a><%= link_to "Show Profile", musician_path(current_musician) %> </a></li>
+          <li class="nav-link"><a><%= link_to "Sign Out", destroy_musician_session_path, :method => :delete %> </a></li>
+        <% else %>
+            <li class="nav-link"><a><%= link_to "Sign In", new_musician_session_path, :method => :get %> </a></li>
+            <li class="nav-link"><a><%= link_to "Sign up", new_musician_registration_path, :method => :get %> </a></li>
+        <% end %>
+
     </div>
 
     <div class="navigation-tools">
@@ -50,28 +39,19 @@
           <button type="submit">
             <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/search-icon.png" alt="">
           </button>
+
         </div>
       </div>
 
 
     </div>
   </div>
+
 </header>
 
 
     <nav>
-      <%= link_to "Band Aide", root_path %>
-      <% if musician_signed_in? %>
-        <%= image_tag current_musician.avatar.thumb %>
-        <%= link_to "Show Profile", musician_path(current_musician) %>
-        Welcome <%= current_musician.firstname %>
-        <%= link_to "Create a band", new_band_path %>
-        <%= link_to "Sign Out", destroy_musician_session_path, :method => :delete %>
-      <% else %>
-        <%= link_to "Sign In", new_musician_session_path, :method => :get %>
-        <%= link_to "Sign up", new_musician_registration_path, :method => :get %>
 
-<% end %>
     </nav>
 
 
