Added image to band show and index home

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,6 +6,7 @@
 
     <% @bands.each do |band| %>
       <%= band.name %><br />
+      <%= image_tag band.avatar.thumb %><br />
     <% end %>
   </section>
 
