Added poster field and mounter in band.  Updated seeds to have faker image

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,7 +6,7 @@
 
     <% @bands.each do |band| %>
       <%= band.name %><br />
-      <%= image_tag band.avatar.thumb %><br />
+      <%= image_tag band.poster.thumb %><br />
     <% end %>
   </section>
 
