Changed from current_musician to musician instance in musicians controller, updated home index and show html"
"

--- a/app/views/musicians/show.html.erb
+++ b/app/views/musicians/show.html.erb
@@ -4,7 +4,7 @@
 
 <h3>Bio</h3>
 
-<%= image_tag current_musician.avatar.profile %>
+<%= image_tag @musician.avatar.profile %>
 
 Name:
 <%= @musician.firstname %> <%= @musician.lastname %>
