we can now add a position for  a band leader

--- a/app/views/bands/_band.html.erb
+++ b/app/views/bands/_band.html.erb
@@ -5,8 +5,8 @@
   </div>
 
   <div class="field">
-    <%= f.label :genre %><br />
-    <%= f.select :genre_id, options_for_select(@genre.collect {|g| [ g.description, g.id] }) %>
+    <%= f.label :genre %><br/>
+    <%= f.select :genre_id, options_for_select(@genres.collect {|g| [ g.description, g.id] }) %>
   </div>
 
   <div class="field">
@@ -14,24 +14,24 @@
     <%= f.text_field :description %>
   </div>
 
+
   <%= f.fields_for :members,  [Member.new] do |member| %>
     <div id="field">
       <%= member.label :position %><br />
       <%= member.select :position_id, options_for_select(@positions.collect  {|p| [ p.description, p.id] }) %>
-      <%= member.hidden_field :musician_id, :value => current_musician.id %>
     </div>
   <%end %>
 
-  <div id= "members">
+  <!-- <div id= "members">
     <%= f.fields_for :members do |member| %>
-      <%= render 'member_field', f: member  %>
+      <%= render 'member_fields', f: member  %>
     <% end %>
 
     <div class='links'>
       <%= link_to_add_association 'add member', f,  :members %>
     </div>
 
-  </div>
+  </div> -->
 
   <div>
     <%= f.submit %>
