--- a/app/views/bands/show.html.erb
+++ b/app/views/bands/show.html.erb
@@ -3,6 +3,8 @@
 
 <h1><%= @band.name %></h1>
 
+<%= image_tag @band.poster.profile %>
+
 <%= @band.description %>
 
 <br /><%= link_to "Back", request.referer.present? ? request.referer : root_path %>
