--- a/app/views/musicians/show.html.erb
+++ b/app/views/musicians/show.html.erb
@@ -1,12 +1,20 @@
 <h1><%=@musician.firstname %> <%=@musician.lastname%></h1>
 
-
-
 <h3>Bio</h3>
 
-<%= image_tag current_musician.avatar.profile %>
+<%= image_tag @musician.avatar.profile %>
 
 Name:
 <%= @musician.firstname %> <%= @musician.lastname %>
 
 <br /><%= link_to "Back", request.referer.present? ? request.referer : root_path %>
+
+<h3>Musicians near you</h3>
+<ol>
+  <% @nearby_musicians.each do |m| %>
+    <li>
+      <p><%= m.email %></p>
+      <p><%= m.display_distance_to(@musician) %> km away</p>
+    </li>
+  <% end %>
+</ol>
