Fixed some spacing in code and rearranged the band index page

--- a/app/views/bands/index.html.erb
+++ b/app/views/bands/index.html.erb
@@ -5,12 +5,13 @@
 <% @bands.each do |band| %>
 
 <p>
-  <%=link_to band.name , band_path(band.id)%>
-   <%= band.genre.description %>
+  <%= image_tag band.poster.thumb %><br />
+  <%= link_to band.name, band_path(band.id)%>
+  <%= band.genre.description %><br />
 </p>
 
 <p>
-  <%= band.description %>
+  <%= band.description %><br />
 </p>
 
 <% end %>
