--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
-    <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=#{ Figaro.env.google_maps_api_key }}&callback=initMap", async: true, defer: true %>
+    <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=#{ Figaro.env.google_maps_api_key }&callback=initMap", async: true, defer: true %>
 
 
     <style>
@@ -50,7 +50,11 @@
     </div>
   </div>
 </header>
+<section>
+  <div id="map">
 
+  </div>
+</section>
     <% if notice %>
       <p class="alert alert-success"><%= notice %></p>
     <% end %>
