corrected map location from application to views home page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -27,4 +27,9 @@
       <%= image_tag musician.avatar.thumb %><br />
     <% end %>
   </section>
+  <section>
+    <div id="map">
+
+    </div>
+  </section>
 </main>
