Fixed if condition to == instead of = (assigning musician.id) to current_musician

--- a/app/views/musicians/show.html.erb
+++ b/app/views/musicians/show.html.erb
@@ -7,8 +7,10 @@
 Name:
 <%= @musician.firstname %> <%= @musician.lastname %>
 
-<% if  musician_signed_in? && current_musician.id = @musician.id %>
-  <br /><%= link_to "Edit Profile", edit_musician_registration_path %>
+<% if musician_signed_in? %>
+  <% if current_musician.id == @musician.id %>
+    <br /><%= link_to "Edit Profile", edit_musician_registration_path %>
+  <% end %>
 <% end %>
 
 <br /><%= link_to "Back", request.referer.present? ? request.referer : root_path %>
