--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -15,7 +15,7 @@
       Search by Genre:
     </p>
     <% @genres.each do |genre| %>
-      <%= genre.description %>
+      <%= link_to genre.description, remote: true %>
     <% end %>
   </aside>
 
