Made links out of genres and started adding javascript for genre search

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -15,7 +15,7 @@
       Search by Genre:
     </p>
     <% @genres.each do |genre| %>
-      <%= link_to genre.description, remote: true %>
+      <%= link_to genre.description, remote: true, class: "#{genre.description}" %>
     <% end %>
   </aside>
 
