Got JS working for finding bands with partial but I have to fix the return so it only gives back the records and not the page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,10 +4,9 @@
 
     <h3>Bands</h3>
 
-    <% @bands.each do |band| %>
-      <%= link_to band.name, band_path(band.id) %><br />
-        <%= image_tag band.poster.thumb %><br />
-      <% end %>
+  <div class="bands">
+    <%= render "home/bands" %>
+  </div>
   </section>
 
   <aside id="search-category-list">
