Temporarily commented out map js because it's crashing.  Will fix after.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -26,9 +26,9 @@
       <%= image_tag musician.avatar.thumb %><br />
     <% end %>
   </section>
-  <section>
+  <!-- <section>
     <div id="map">
 
     </div>
-  </section>
+  </section> -->
 </main>
