--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
-    <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=#{ Figaro.env.google_maps_api_key }&callback=initMap", async: true, defer: true %>
+    <!--# <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=#{ Figaro.env.google_maps_api_key }&callback=initMap", async: true, defer: true %> -->
 
 
   </head>
@@ -53,7 +53,7 @@
     <% end %>
 
   <%= yield %>
-  
+
 
   </body>
 </html>
