Added logic to put all bands back if initially searched by category and an all link on the home page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,8 +11,9 @@
 
   <aside id="search-category-list">
     <p>
-      Search by Genre:
+      Search Bands by Genre:
     </p>
+    <%= link_to "All", remote: true, class: "All" %>
     <% @genres.each do |genre| %>
       <%= link_to genre.description, remote: true, class: "#{genre.description}" %>
     <% end %>
