Moved nav js to layout.js, added banner image to home page and added slick js.  Added slick gem.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,9 @@
+<div id="carousel">
+    <div><%= image_tag("home/index/banner1.png") %></div>
+    <!-- <div><img src="banner2.jpg" alt="banner2" /></div>
+    <div><img src="banner3.jpg" alt="banner3" /></div> -->
+</div>
+
 <h1>Welcome to Band Aide</h1>
 <main>
   <section id="bands-list">
