--- a/app/views/musicians/show.html.erb
+++ b/app/views/musicians/show.html.erb
@@ -12,16 +12,21 @@ Name:
     <br /><%= link_to "Edit Profile", edit_musician_registration_path %>
   <% end %>
 
-<%= form_for @musician do |f| %>
-    <div id="field"><
+    
+
+  <%= form_for  [@musician, @skill] do |f| %>
+
+  <div id="field">
     <%= f.label :position %><br />
-    <%= f.select :position_ids, options_for_select(@positions.collect  {|p| [ p.description, p.id] }) %>
+    <%= f.select :position_id , options_for_select(@positions.collect  {|p| [ p.description, p.id] }) %>
+     <%= f.hidden_field :musician_id, :value => current_musician.id %>
   </div>
 
-<div>
+  <div>
     <%= f.submit %>
-</div>
+  </div>
 
+``<% end %>
 <% end %>
 
 <br /><%= link_to "Back", request.referer.present? ? request.referer : root_path %>
