Made modifications so that the banner on the home page will work via JS

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,6 @@
-<div id="carousel">
+<div class="carousel">
     <div><%= image_tag("home/index/banner1.png") %></div>
-    <!-- <div><img src="banner2.jpg" alt="banner2" /></div>
-    <div><img src="banner3.jpg" alt="banner3" /></div> -->
+    <div><%= image_tag("home/index/banner2.png") %></div>
 </div>
 
 <h1>Welcome to Band Aide</h1>
