--- a/app/views/bands/show.html.erb
+++ b/app/views/bands/show.html.erb
@@ -9,10 +9,23 @@
 
 <% if musician_signed_in? %>
   <% if @band.leader.id == current_musician.id %>
-  <p>
-    "Hi"
-  </p>
+
+      <%= form_for [@band , @member] do |f| %>
+
+      <div id="field">
+        <%= f.label :position %><br />
+        <%= f.select :position_id , options_for_select(@positions.collect  {|p| [ p.description, p.id] }) %>
+        <%= f.hidden_field :musician_id, :value => nil %>
+        <%= f.hidden_field :band_id, :value => @band.id %>
+      </div>
+
+       <div class="field">
+        <%= f.submit %>
+      </div>
+    <% end %>
+
   <% end %>
+
 <% end %>
 
 <br /><%= link_to "Back", request.referer.present? ? request.referer : root_path %>
