--- a/app/views/bands/show.html.erb
+++ b/app/views/bands/show.html.erb
@@ -6,13 +6,17 @@
 <%= image_tag @band.poster.profile %><br />
 
 <h3>Description</h3>
-<%= @band.description %><br />
+<p>
+  <%= @band.description %>
+</p>
+
+
+<h3>Current Positions in Band</h3><br />
 
 <% @band.members.each do |member| %>
 
-<h3>Current Positions in Band</h3>
   <p>
-    <%= member.position.description %> 
+    <%= member.position.description %>
   </p>
 <% end %>
 
