Added lines back that I accidentally deleted

--- a/app/views/bands/show.html.erb
+++ b/app/views/bands/show.html.erb
@@ -20,7 +20,8 @@
   </p>
 <% end %>
 
-
+<% if musician_signed_in? %>
+  <% if @band.leader.id == current_musician.id %>
 
       <%= form_for [@band , @member] do |f| %>
 
@@ -39,6 +40,5 @@
   <% end %>
 
 <% end %>
-
 
 <br /><%= link_to "Back", request.referer.present? ? request.referer : root_path %>
