Fixed typo in routes and added delete link to band show page for members

--- a/app/views/bands/show.html.erb
+++ b/app/views/bands/show.html.erb
@@ -17,6 +17,8 @@
 
   <p>
     <%= member.position.description %>
+    <%= link_to 'Remove', band_member_path(@band, member.id),
+            data: {:confirm => 'Are you sure?'}, :method => :delete %>
   </p>
 <% end %>
 
