--- a/app/views/bands/show.html.erb
+++ b/app/views/bands/show.html.erb
@@ -17,8 +17,13 @@
 
   <p>
     <%= member.position.description %>
-    <%= link_to 'Remove', band_member_path(@band, member.id),
-            data: {:confirm => 'Are you sure?'}, :method => :delete %>
+
+    <% if musician_signed_in? %>
+      <% if @band.leader.id == current_musician.id %>
+        <%= link_to 'Remove', band_member_path(@band, member.id),
+                data: {:confirm => 'Are you sure?'}, :method => :delete %>
+      <% end %>
+    <% end %>
   </p>
 <% end %>
 
