--- a/app/views/bands/show.html.erb
+++ b/app/views/bands/show.html.erb
@@ -22,6 +22,8 @@
 
       <% if member.vacant? %>
         <%= link_to 'Apply', band_member_path(@band, member, member: {musician_id: current_musician.id}), :method => :put %>
+      <% else %>
+        <%= member.musician.firstname%>
       <% end %>
 
       <% if @band.leader.id == current_musician.id %>
