Changed some scss to get the slick theme to work.  Imported slick in base scss rather than application scss.

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,1 +1,11 @@
+.slick-prev:after {
+  content: ">";
+  color: red;
+  font-size: 30px;
+}
 
+.slick-next:before {
+  content: "<";
+  color: red;
+  font-size: 30px;
+}
