--- a/app/views/bands/show.html.erb
+++ b/app/views/bands/show.html.erb
@@ -18,7 +18,7 @@
       <% if member.vacant? && current_musician.skilled_enough?(member.position.id) %>
         <%= link_to 'Apply', band_member_path(@band, member, member: {musician_id: current_musician.id}), :method => :put %>
       <% elsif member.vacant? && current_musician.skilled_enough?(member.position.id) == false %>
-          <p>Sorry, this position requires a higher skill level.</p>
+          <p>Cannot apply: this position requires a higher skill level than you currently possess.</p>
       <% else %>
         <%= member.musician.firstname %>
       <% end %>
