--- a/app/views/home/_bands.html.erb
+++ b/app/views/home/_bands.html.erb
@@ -1,4 +1,10 @@
+<ul class="band-list">
 <% @bands.each do |band| %>
-  <%= link_to band.name, band_path(band.id) %><br />
-  <%= image_tag band.poster.thumb %><br />
+  <li>
+  <%= link_to band_path(band.id) do %>
+    <%= image_tag band.poster.thumb %>
+    <p><%= band.name %></p>
+  <% end %>
+  </li>
 <% end %>
+</ul>
