aligned musicians with grid and limited to 8 in homepage

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -19,15 +19,9 @@
     <section id="musicians-list">
       <h3>Musicians near you</h3>
 
-      <% @musicians.each do |musician| %>
-        <%= link_to musician.firstname, musician_path(musician.id) %><br />
-        <%= image_tag musician.avatar.thumb %><br />
-        <% if current_musician.present? %>
-          <%= musician.display_distance_to(@musician) %> km away<br />
-        <% else %>
-          Based in <%= musician.city %>
-        <% end %>
-      <% end %>
+      <div class="musicians">
+        <%= render "home/musicians" %>
+      </div>
     </section>
     <!-- <section>
       <div id="map">
