--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -30,6 +30,23 @@ main {
       }
     }
   }
+
+  ul.musicians-list {
+    @include outer-container;
+
+    li {
+      @include span-columns(3 of 12);
+      @include omega(4n);
+      text-align: center;
+
+      a {
+      display: block;
+    }
+
+
+    }
+
+  }
 }
 
 aside {
