--- a/app/assets/stylesheets/base/_layout.scss
+++ b/app/assets/stylesheets/base/_layout.scss
@@ -32,7 +32,7 @@ body {
   -webkit-font-smoothing: antialiased;
   background-color: #333333;
   color: #030303;
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-family: "Rockwell", Arial, sans-serif;
   font-size: 1em;
   line-height: 1.5; }
 
