--- a/app/assets/stylesheets/base/_layout.scss
+++ b/app/assets/stylesheets/base/_layout.scss
@@ -32,12 +32,11 @@ body {
   -webkit-font-smoothing: antialiased;
   background-color: #333333;
   color: #030303;
-  font-family: "Rockwell", Arial, sans-serif;
-  font-size: 1em;
+  font-family: 'Titillium Web', sans-serif;  font-size: 1em;
   line-height: 1.5; }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-family: 'Titillium Web', sans-serif;
   line-height: 1.25em;
   margin: 0;
   text-rendering: optimizeLegibility; }
@@ -108,7 +107,7 @@ input,
 label,
 select {
   display: block;
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-family: 'Titillium Web', sans-serif;
   font-size: 1em; }
 
 label {
@@ -132,7 +131,7 @@ select[multiple=multiple] {
   border-radius: 0.1875em;
   border: 1px solid #dddddd;
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.06);
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-family: 'Titillium Web', sans-serif;
   font-size: 1em;
   margin-bottom: 0.75em;
   padding: 0.5em 0.5em;
@@ -251,7 +250,7 @@ header.navigation {
     color: rgba(255, 255, 255, 0.7);
     display: block;
     float: right;
-    font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+    font-family: 'Titillium Web', sans-serif;
     font-weight: 700;
     line-height: 60px;
     margin: 0;
