--- a/app/assets/stylesheets/base/_variables.scss
+++ b/app/assets/stylesheets/base/_variables.scss
@@ -3,7 +3,8 @@ $medium-screen: 600px;
 $large-screen: 900px;
 
 // Typography
-$base-font-family: $font-stack-system;
+// $base-font-family: $font-stack-system;
+$base-font-family: 'Titillium Web', sans-serif;
 $heading-font-family: $base-font-family;
 
 // Font Sizes
