moved googleapi script to show page

--- a/app/views/musicians/show.html.erb
+++ b/app/views/musicians/show.html.erb
@@ -28,6 +28,8 @@ Name:
 
 <br /><%= link_to "Back", request.referer.present? ? request.referer : root_path %>
 
+<%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=#{Figaro.env.google_maps_api_key }&callback=initMap", async: true, defer: true %>
+
 <div id="map" data-latitude=<%= @musician.latitude %> data-longitude=<%= @musician.longitude%>  >
 </div>
 
