--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+x<div class="container">
 
   <div class="hero">
 
@@ -23,11 +23,7 @@
         <%= render "home/musicians" %>
       </div>
     </section>
-    <!-- <section>
-      <div id="map">
 
-      </div>
-    </section> -->
   </main>
 
   <aside id="search-category-list">
