Changed font colours so it's readable with the grey background - changed Colors and Base-font-color in _variables.css.

--- a/app/assets/stylesheets/base/_layout.scss
+++ b/app/assets/stylesheets/base/_layout.scss
@@ -31,12 +31,13 @@ input[type="submit"] {
 body {
   -webkit-font-smoothing: antialiased;
   background-color: #333333;
-  color: #030303;
+  color: white;
   font-family: 'Titillium Web', sans-serif;  font-size: 1em;
   line-height: 1.5; }
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Titillium Web', sans-serif;
+  color: white;
   line-height: 1.25em;
   margin: 0;
   text-rendering: optimizeLegibility; }
@@ -66,12 +67,12 @@ a {
   -webkit-transition: color 0.1s linear;
   -moz-transition: color 0.1s linear;
   transition: color 0.1s linear;
-  color: #477dca;
+  color: white;
   text-decoration: none; }
   a:hover {
     color: #2c5999; }
   a:active, a:focus {
-    color: #2c5999;
+    color: white;
     outline: none; }
 
 hr {
