--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -69,6 +69,11 @@ aside {
   @include span-columns(3);
   color: white;
 
+  div.genres-scroll {
+    height: 500px;
+    overflow: auto;
+  }
+
   a {
     color: white;
   }
