--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -28,16 +28,17 @@ x<div class="container">
 
   <aside id="search-category-list">
     <p>Search Bands by Genre:</p>
-    <ul>
-      <li>
-        <%= link_to "All", remote: true, class: "All" %>
-      </li>
-      <% @genres.each do |genre| %>
+    <div class="genres-scroll">
+      <ul>
         <li>
-          <%= link_to genre.description, remote: true, class: "#{genre.description}" %>
+          <%= link_to "All", remote: true, class: "All" %>
         </li>
-      <% end %>
-    </ul>
-
+        <% @genres.each do |genre| %>
+          <li>
+            <%= link_to genre.description, remote: true, class: "#{genre.description}" %>
+          </li>
+        <% end %>
+      </ul>
+    </div>
   </aside>
 </div>
