--- a/app/views/bands/show.html.erb
+++ b/app/views/bands/show.html.erb
@@ -13,24 +13,31 @@
   <p>
     <%= member.position.description %>
 
+
     <% if musician_signed_in? %>
 
-      <% if member.vacant? && current_musician.skilled_enough?(member.position.id) %>
-        <%= link_to 'Apply', band_member_path(@band, member, member: {musician_id: current_musician.id}), :method => :put %>
-      <% elsif member.vacant? && current_musician.skilled_enough?(member.position.id) == false %>
-          <p>Cannot apply: this position requires a higher skill level than you currently possess.</p>
-      <% else %>
-        <%= member.musician.firstname %>
-      <% end %>
-
+      <!-- Owners -->
       <% if @band.leader.id == current_musician.id %>
-        <%= link_to 'Remove', band_member_path(@band, member.id),
-                data: {:confirm => 'Are you sure?'}, :method => :delete %>
-      <% end %>
 
-    <% else %>
-      <p>Please register to apply</p>
+          <%= link_to 'Remove', band_member_path(@band, member.id), data: {:confirm => 'Are you sure?'}, :method => :delete %>
+
+      <!-- Non Owner -->
+      <% elsif @band.leader.id != current_musician.id %>
+
+          <% if member.vacant? && current_musician.skilled_enough?(member.position.id) %>
+            <!-- <% link_to 'Apply', band_member_path(@band, member, member: {musician_id: current_musician.id}), :method => :put %> -->
+            <%= link_to 'Apply', band_member_approvals_path(@band, member, approval: {musician_id: current_musician.id, approval: false, member_id: member.id}), :method => :post %>
+          <% elsif member.vacant? && current_musician.skilled_enough?(member.position.id) == false %>
+              <p>Cannot apply: this position requires a higher skill level than you currently possess.</p>
+          <% else %>
+            <%= member.musician.firstname %>
+          <% end %>
+      <% else %>
+          <p>Please register to apply</p>
+      <% end %>
     <% end %>
+
+
   </p>
 <% end %>
 
