Changed default text in search bar, changed skill level 'Professional' to 'Advanced', changed 'search' by genre to 'filter', removed commented out text in home.scss.

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -18,15 +18,17 @@ main {
     color: white;
   }
 
+  h3 {
+    color: white;
+    margin-top: 25px;
+  }
+
   ul.band-list {
     @include outer-container;
 
     h1 {
       color: white;
-    }
-
-    h3 {
-      color: white;
+      margin-bottom: 25px;
     }
 
     li {
