--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,6 @@ x<div class="container">
     <h1>Welcome to Band Aide</h1>
 
     <section id="bands-list">
-
       <h3>Bands</h3>
 
       <div class="bands">
@@ -27,7 +26,7 @@ x<div class="container">
   </main>
 
   <aside id="search-category-list">
-    <p>Search Bands by Genre:</p>
+    <p>Filter Bands by Genre:</p>
     <div class="genres-scroll">
       <ul>
         <li>
