--- a/app/views/musicians/show.html.erb
+++ b/app/views/musicians/show.html.erb
@@ -16,7 +16,7 @@ Name:
         <%= f.label :position %><br />
         <%= f.select :position_id, options_for_select(@positions.collect  { |p| [ p.description, p.id] }) %>
         <%= f.label :categories %>
-        <%= f.select :level, [['Beginner', 1], ['intermediate', 2], ['Professional', 3]]  %>
+        <%= f.select :level, [['Beginner', 1], ['Intermediate', 2], ['Advanced', 3]]  %>
         <%= f.hidden_field :musician_id, :value => current_musician.id %>
       </div>
       <div>
