--- a/app/views/bands/show.html.erb
+++ b/app/views/bands/show.html.erb
@@ -13,19 +13,23 @@
   <p>
     <%= member.position.description %>
 
-
     <% if musician_signed_in? %>
 
       <!-- Owners -->
       <% if @band.leader.id == current_musician.id %>
+        <h1>Approvals</h1>
+        <%= member.approvals.each do |approval| %>
+          <%= approval.musician.firstname %>
+          <%= link_to 'Accept', band_member_path(@band, member, member: {musician_id: current_musician.id}), :method => :put %>
+        <% end %>
 
-          <%= link_to 'Remove', band_member_path(@band, member.id), data: {:confirm => 'Are you sure?'}, :method => :delete %>
+        <%= link_to 'Remove', band_member_path(@band, member.id), data: {:confirm => 'Are you sure?'}, :method => :delete %>
+
 
       <!-- Non Owner -->
       <% elsif @band.leader.id != current_musician.id %>
 
           <% if member.vacant? && current_musician.skilled_enough?(member.position.id) %>
-            <!-- <% link_to 'Apply', band_member_path(@band, member, member: {musician_id: current_musician.id}), :method => :put %> -->
             <%= link_to 'Apply', band_member_approvals_path(@band, member, approval: {musician_id: current_musician.id, approval: false, member_id: member.id}), :method => :post %>
           <% elsif member.vacant? && current_musician.skilled_enough?(member.position.id) == false %>
               <p>Cannot apply: this position requires a higher skill level than you currently possess.</p>
