--- a/app/views/musicians/show.html.erb
+++ b/app/views/musicians/show.html.erb
@@ -1,11 +1,9 @@
-<h1><%= @musician.firstname %> <%= @musician.lastname %></h1>
+<br /><%= link_to "Back", request.referer.present? ? request.referer : root_path %>
+<br /><h2><%= @musician.firstname %> <%= @musician.lastname %></h2>
 
-<h3>Bio</h3>
+<h4>Profile</h4>
 
-<%= image_tag @musician.avatar.profile %>
-
-Name:
-<%= @musician.firstname %> <%= @musician.lastname %>
+<%= image_tag @musician.avatar.profile %><br />
 
 <% if musician_signed_in? %>
   <% if current_musician.id == @musician.id %>
@@ -26,7 +24,13 @@ Name:
   <% end %>
 <% end %>
 
-<br /><%= link_to "Back", request.referer.present? ? request.referer : root_path %>
+<br />
+  Musicians near
+  <% if @musician == current_musician %>
+    you:
+  <% else %>
+    <%= @musician.firstname %>:<br />
+  <% end %>
 
 <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=#{Figaro.env.google_maps_api_key }&callback=initMap", async: true, defer: true %>
 
