--- a/app/views/musicians/show.html.erb
+++ b/app/views/musicians/show.html.erb
@@ -1,14 +1,37 @@
 <h1><%= @musician.firstname %> <%= @musician.lastname %></h1>
 
-<h3>Bio</h3>
+<h3>Bio</h3><br />
 
-<%= image_tag @musician.avatar.profile %>
+<%= image_tag @musician.avatar.profile %><br />
 
-Name:
-<%= @musician.firstname %> <%= @musician.lastname %>
+Name:<br />
+<%= @musician.firstname %> <%= @musician.lastname %><br />
 
 <% if musician_signed_in? %>
-  <% if current_musician.id == @musician.id %>
+  <% if current_musician.id == @musician.id %><br />
+
+    <% if current_musician.bands.count > 0 %>
+
+      <h1>Bands owned</h1><br />
+
+      <% current_musician.owned_bands.each do |band|%>
+        Band:  <%= band.name %><br />
+        <%= button_to 'View Band', band_path(band), :method => :get %><br />
+      <% end %>
+
+    <% end %>
+
+    <% if current_musician.members.count > 0 %>
+
+      <h1>Member of Bands</h1><br />
+
+      <% current_musician.members.each do |member|%>
+        Band:  <%= member.band.name %><br />
+        Position:  <%= member.position.description %><br />  <%= button_to 'View Band', band_path(member.band.id), :method => :get %><br />
+      <% end %>
+
+    <% end %>
+
     <br /><%= link_to "Edit Profile", edit_musician_registration_path %>
 
     <%= form_for [@musician, @skill] do |f| %>
