changed background, changed logo in nav, changed musician card

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -9,9 +9,16 @@
   color: red;
   font-size: 30px;
 }
+body{
+  background-image: url(background/564960.jpg);
+  background-size: cover;
 
+
+
+}
 main {
   @include span-columns(9);
+
 
   h1 {
     text-align: center;
@@ -50,9 +57,9 @@ main {
       @include omega(4n);
       text-align: center;
       margin-bottom: 20px;
-      background-color: black;
-      color: red;
-
+      border: 2px dashed rgba(0,0,0,0.2);
+      background-color: rgba(0,0,0,0.05);
+      box-shadow: 0px 0px 1px 1px rgba(0,0,0,0.15);
       p {
         font-size: 0.77em;
       }
@@ -80,8 +87,11 @@ aside {
 }
 
 .hero {
-  background-image: url("banner1");
+  background-image: url("home/index/Band_Aide_Logo");
   background-size: cover;
   margin-bottom: 30px;
-  height: 500px;
+  height: 700px;
+  position: relative;
+  bottom: 240px;
+
 }
