--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <header class="navigation">
     <div class="navigation-wrapper">
       <a href="javascript:void(0)" class="logo">
-        <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_1.png" alt="">
+        <%=image_tag("background/Band Aide Logo.png")%>
       </a>
       <a href="" class="navigation-menu-button" id="js-mobile-menu">MENU</a>
     <div class="nav">
