Added description to musician and added field to show and new musician

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -66,6 +66,11 @@
     <%= f.file_field :avatar %>
   </div>
 
+  <div class="field">
+    <%= f.label :description %><br />
+    <%= f.file_field :description %>
+  </div>
+
   <div class="actions">
     <%= f.submit "Update" %>
   </div>
