--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -60,6 +60,11 @@
     <%= f.file_field :avatar %>
   </div>
 
+  <div class="field">
+    <%= f.label :description %><br />
+    <%= f.file_field :description %>
+  </div>
+
   <div class="actions">
     <%= f.submit "Sign up" %>
   </div>
