Fixed description so it's a text field and added field to strong params

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -68,7 +68,7 @@
 
   <div class="field">
     <%= f.label :description %><br />
-    <%= f.file_field :description %>
+    <%= f.text_field :description %>
   </div>
 
   <div class="actions">
