--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -62,7 +62,7 @@
 
   <div class="field">
     <%= f.label :description %><br />
-    <%= f.file_field :description %>
+    <%= f.text_field :description %>
   </div>
 
   <div class="actions">
